--- a/index.html
+++ b/index.html
@@ -4222,7 +4222,7 @@ window.onload = async () => {
             rol: 'admin',
             permisos: ['dashboard','bom','bases','menu','stock','planning','mrp','eventos','compras','familias','usuarios']
         });
-        console.log('👤 Usuario Admin creado por defecto con contraseña: ' + PASSWORD_ADMIN);
+        console.log('👤 Usuario Admin creado por defecto con hash seguro');
     }
     
     // Guardar usuarios inicializados
